- Removed the loading of all old controller and service js files - Fixed up character and admin character views after finding some bad bindings - Changed image details input from file upload to just setting a url.  This should make it easy to change the image while keeping the image flexible.  This needs to be seriously locked down from a perms standpoint however

--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/adminNewCharacter.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/adminNewCharacter.html
@@ -14,13 +14,15 @@
         <hr />
         <h4>Imagery:</h4>
         <div>
-            <label>Main Image (used when viewing character page):</label>
-            <input type="file" value="..." ng-model="vm.character.mainImageUrl" />
+            <label title="Used when viewing character page">Main Image Url:</label>
+            <!--<input type="file" value="..." ng-model="vm.character.mainImageUrl" />-->
+            <input type="text" value="{{vm.character.mainImageUrl}}" ng-model="vm.character.mainImageUrl" />
         </div>
         <br />
         <div>
-            <label>Tile Image (used when viewing the roster page):</label>
-            <input type="file" value="..." ng-model="vm.character.thumbnailUrl" />
+            <label title="Used when viewing the roster page">Tile Image Url:</label>
+            <!--<input type="file" value="..." ng-model="vm.character.thumbnailUrl" />-->
+            <input type="text" value="{{vm.character.thumbnailUrl}}" ng-model="vm.character.thumbnailUrl" />
         </div>
 
         <div style="text-align:center">
