- Removed auth wall on /characters - Override equals on MovementStat - Adjusted app/controllers to call characters based on their ownerID rather than primary ID since that can change if they're reloaded

--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/adminCharacter.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/adminCharacter.html
@@ -88,7 +88,7 @@
         <br />
         <br />
         <br />
-        <h6 style="float:left;">Sorting by: {{vm.predicate}}</h6>
+        <!--<h6 style="float:left;">Sorting by: {{vm.predicate}}</h6>-->
         <input type="button" ng-click="vm.showMoveRow()" value="Add new move" />
         <div ng-show="vm.showNewMoveRow">
             <table class="table table-hover">
