--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/home.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/home.html
@@ -1,4 +1,4 @@
-﻿<div class="row">
+﻿<!--<div class="row">
     <div class="col-md-2">
         &nbsp;
     </div>
@@ -15,4 +15,30 @@
     <div class="col-md-2">
         &nbsp;
     </div>
+</div>-->
+<div class="row" style="width: 50%; margin: 0 auto;">
+    <h1>
+        <img alt="KuroganeHammer" height="326" src="http://kuroganehammer.com/logo/KH%20LOGO1.png">
+    </h1>
+    <br/><br/>
+    <table id="AutoNumber1" style="border-collapse: collapse;" >
+        <tbody>
+            <tr>
+                <td>
+                    <a href="#smash4"><img alt="Smash Bros Wii U Frame Data" height="214" src="http://kuroganehammer.com/logo/wiiu.png"></a>
+                </td>
+                <td>
+                    <a href="/Melee"><img alt="Smash Bros Melee Frame Data"  height="214" src="http://kuroganehammer.com/logo/melee.png" ></a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Pokken"><img alt="Pokken Frame Data"  height="281" src="http://kuroganehammer.com/logo/pokken.png" ></a>
+                </td>
+                <td>
+                    <a href="/RivalsofAether"><img alt="Rivals of Aether Frame Data"  height="281" src="http://kuroganehammer.com/logo/rivals.png"></a>
+                </td>
+            </tr>
+        </tbody>
+    </table><br>
 </div>
