--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/character.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/character.html
@@ -1,17 +1,17 @@
-﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2">
-    <h2>{{vm.character.name}}'s Frame Data</h2>
+﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2 ng-class:vm.character.name;">
+    <h2>{{vm.character.name | uppercase}}</h2>
 
     <a href="https://twitter.com/share" class="twitter-share-button" data-via="jpol711" data-dnt="true">Tweet</a>
     <div class="container fade-in two">
 
-        <div style="text-align:center;">
+        <div style="text-align: center;">
             <img ng-src="{{vm.character.mainImageUrl}}"
-                 alt="{{vm.character.name}}" style="margin:auto" />
+                 alt="{{vm.character.name}}" style="margin: auto" />
             <br />
             <br />
             <br />
             <br />
-            <table class="table table-hover table-striped" style="border-collapse: collapse;">
+            <table class="table table-hover table-striped">
                 <thead>
                     <tr>
                         <th>
@@ -22,7 +22,7 @@
                         </th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody >
                     <tr ng-repeat="item in vm.movementData" ng-click="vm.goToMovementRanking(item)">
                         <td nowrap>{{item.name}}</td>
                         <td nowrap>{{item.value}}</td>
@@ -37,8 +37,9 @@
     </div>
 
     <div class="fade-in two">
-        <h6 style="float:left;">Sorting by: {{vm.predicate}}</h6>
-        <table class="table table-hover">
+        <h6 style="font-size: larger;">GROUND MOVES</h6><br />
+        <h6 style="float: left;">Sorting by: {{vm.predicate}}</h6>
+        <table class="table table-hover table-striped">
             <thead>
                 <tr>
                     <th title="Name">
@@ -69,10 +70,10 @@
                         <a href="" ng-click="vm.order('knockbackGrowth')">KBG</a>
                         <span ng-show="vm.predicate === 'knockbackGrowth'" ng-class="{vm.reverse:vm.reverse}"></span>
                     </th>
-                    <!--<th>
+                    <th>
                         <a href="" ng-click="vm.order('type')">Type</a>
                         <span ng-show="vm.predicate === 'type'" ng-class="{vm.reverse:vm.reverse}"></span>
-                    </th>-->
+                    </th>
                     <th title="Landing Lag">
                         <a href="" ng-click="vm.order('landingLag')">LandingLag</a>
                         <span ng-show="vm.predicate === 'landingLag'" ng-class="{vm.reverse:vm.reverse}"></span>
@@ -84,7 +85,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in vm.moveData | orderBy:vm.predicate:vm.reverse" ng-click="vm.goToMoveRanking(item)">
+                <tr ng-repeat="item in vm.moveData | orderBy:vm.predicate:vm.reverse | filter : {type: 'Ground'} : true" ng-click="vm.goToMoveRanking(item)">
                     <td nowrap>{{item.name}}</td>
                     <td nowrap>{{item.hitboxActive}}</td>
                     <td nowrap>{{item.firstActionableFrame}}</td>
@@ -92,6 +93,134 @@
                     <td nowrap>{{item.angle}}</td>
                     <td nowrap>{{item.baseKnockBackSetKnockback}}</td>
                     <td nowrap>{{item.knockbackGrowth}}</td>
+                    <td nowrap>{{item.type}}</td>
+                    <td nowrap>{{item.landingLag}}</td>
+                    <td nowrap>{{item.autoCancel}}</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h6 style="font-size: larger;">AERIAL MOVES</h6><br />
+        <h6 style="float: left;">Sorting by: {{vm.predicate}}</h6>
+        <table class="table table-hover table-striped">
+            <thead>
+                <tr>
+                    <th title="Name">
+                        <a href="" ng-click="vm.order('name')">Name</a>
+                        <span ng-show="vm.predicate === 'name'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="HitboxActive">
+                        <a href="" ng-click="vm.order('hitboxActive')">HitboxActive</a>
+                        <span ng-show="vm.predicate === 'hitboxActive'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="First Actionable Frame">
+                        <a href="" ng-click="vm.order('firstActionableFrame')">FAF</a>
+                        <span ng-show="vm.predicate === 'firstActionableFrame'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="Base Damage" nowrap>
+                        <a href="" ng-click="vm.order('baseDamage')">Base Dmg. (+SD)</a>
+                        <span ng-show="vm.predicate === 'baseDamage'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="Angle">
+                        <a href="" ng-click="vm.order('angle')">Angle</a>
+                        <span ng-show="vm.predicate === 'angle'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="BaseKnockBack/SetKnockback">
+                        <a href="" ng-click="vm.order('baseKnockBackSetKnockback')">BKB/WBKB</a>
+                        <span ng-show="vm.predicate === 'baseKnockBackSetKnockback'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="Knockback Growth">
+                        <a href="" ng-click="vm.order('knockbackGrowth')">KBG</a>
+                        <span ng-show="vm.predicate === 'knockbackGrowth'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th>
+                        <a href="" ng-click="vm.order('type')">Type</a>
+                        <span ng-show="vm.predicate === 'type'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="Landing Lag">
+                        <a href="" ng-click="vm.order('landingLag')">LandingLag</a>
+                        <span ng-show="vm.predicate === 'landingLag'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="Auto Cancel">
+                        <a href="" ng-click="vm.order('autoCancel')">AutoCancel</a>
+                        <span ng-show="vm.predicate === 'autoCancel'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="item in vm.moveData | orderBy:vm.predicate:vm.reverse | filter : {type: 'Aerial'} : true" ng-click="vm.goToMoveRanking(item)">
+                    <td nowrap>{{item.name}}</td>
+                    <td nowrap>{{item.hitboxActive}}</td>
+                    <td nowrap>{{item.firstActionableFrame}}</td>
+                    <td nowrap>{{item.baseDamage}}</td>
+                    <td nowrap>{{item.angle}}</td>
+                    <td nowrap>{{item.baseKnockBackSetKnockback}}</td>
+                    <td nowrap>{{item.knockbackGrowth}}</td>
+                    <td nowrap>{{item.type}}</td>
+                    <td nowrap>{{item.landingLag}}</td>
+                    <td nowrap>{{item.autoCancel}}</td>
+                </tr>
+            </tbody>
+        </table>
+
+
+        <h6 style="font-size: larger;">SPECIAL MOVES</h6><br />
+        <h6 style="float: left;">Sorting by: {{vm.predicate}}</h6>
+        <table class="table table-hover table-striped">
+            <thead>
+                <tr>
+                    <th title="Name">
+                        <a href="" ng-click="vm.order('name')">Name</a>
+                        <span ng-show="vm.predicate === 'name'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="HitboxActive">
+                        <a href="" ng-click="vm.order('hitboxActive')">HitboxActive</a>
+                        <span ng-show="vm.predicate === 'hitboxActive'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="First Actionable Frame">
+                        <a href="" ng-click="vm.order('firstActionableFrame')">FAF</a>
+                        <span ng-show="vm.predicate === 'firstActionableFrame'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="Base Damage" nowrap>
+                        <a href="" ng-click="vm.order('baseDamage')">Base Dmg. (+SD)</a>
+                        <span ng-show="vm.predicate === 'baseDamage'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="Angle">
+                        <a href="" ng-click="vm.order('angle')">Angle</a>
+                        <span ng-show="vm.predicate === 'angle'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="BaseKnockBack/SetKnockback">
+                        <a href="" ng-click="vm.order('baseKnockBackSetKnockback')">BKB/WBKB</a>
+                        <span ng-show="vm.predicate === 'baseKnockBackSetKnockback'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="Knockback Growth">
+                        <a href="" ng-click="vm.order('knockbackGrowth')">KBG</a>
+                        <span ng-show="vm.predicate === 'knockbackGrowth'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th>
+                        <a href="" ng-click="vm.order('type')">Type</a>
+                        <span ng-show="vm.predicate === 'type'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="Landing Lag">
+                        <a href="" ng-click="vm.order('landingLag')">LandingLag</a>
+                        <span ng-show="vm.predicate === 'landingLag'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                    <th title="Auto Cancel">
+                        <a href="" ng-click="vm.order('autoCancel')">AutoCancel</a>
+                        <span ng-show="vm.predicate === 'autoCancel'" ng-class="{vm.reverse:vm.reverse}"></span>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="item in vm.moveData | orderBy:vm.predicate:vm.reverse | filter : {type: 'Special'} : true" ng-click="vm.goToMoveRanking(item)">
+                    <td nowrap>{{item.name}}</td>
+                    <td nowrap>{{item.hitboxActive}}</td>
+                    <td nowrap>{{item.firstActionableFrame}}</td>
+                    <td nowrap>{{item.baseDamage}}</td>
+                    <td nowrap>{{item.angle}}</td>
+                    <td nowrap>{{item.baseKnockBackSetKnockback}}</td>
+                    <td nowrap>{{item.knockbackGrowth}}</td>
+                    <td nowrap>{{item.type}}</td>
                     <td nowrap>{{item.landingLag}}</td>
                     <td nowrap>{{item.autoCancel}}</td>
                 </tr>
