--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/movementRanks.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/movementRanks.html
@@ -1,22 +1,25 @@
 ﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2">
-    <h2>{{vm.movementName}}</h2>
+    <h2>{{vm.name | uppercase}}</h2>
     <br />
     <br />
     <!--<a href="https://twitter.com/share" class="twitter-share-button" data-via="jpol711" data-dnt="true">Tweet</a>-->
     <br />
     <br />
-    <table class="table table-hover">
+    <table class="table table-hover table-striped">
         <thead>
             <tr>
-                <th>Character</th>
+                <th>
+                    <a href="" ng-click="vm.order('characterName')">Character</a>
+                    <span class="sortorder" ng-show="predicate === 'characterName'" ng-class="{vm.reverse:vm.reverse}"></span>
+                </th>
                 <th>
                     <a href="" ng-click="vm.order('value')">Value</a>
-                    <span class="sortorder" ng-show="predicate === 'value'" ng-class="{reverse:reverse}"></span>
+                    <span class="sortorder" ng-show="vm.predicate === 'value'" ng-class="{vm.reverse:vm.reverse}"></span>
                 </th>
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="item in vm.movementData | orderBy:predicate:reverse" ng-click="vm.goToCharacter(item)">
+            <tr ng-repeat="item in vm.movementData | orderBy:vm.predicate:vm.reverse" ng-click="vm.goToCharacter(item)">
                 <td><img width="70" height="70" ng-src="{{item.thumbnailUrl}}" /></td>
                 <td>{{item.value}}</td>
             </tr>
