- Site header now updated on login / logout - Polished up AboutUs and Glossary

--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/aboutus.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/aboutus.html
@@ -4,7 +4,7 @@
         <p>
             Welcome to KuroganeHammer, a website dedicated to cataloguing frame data and hitbox data for Super Smash Brothers for Wii U, otherwise known as Smash 4, or SM4SH.
             <br />
-            My name is Aerodrome, and I'm the creator of this website. Some of you may know me from Smashboards, where I used to be kept as a Global Moderator.
+            My name is <b>Aerodrome</b>, and I'm the creator of this website. Some of you may know me from Smashboards, where I used to be kept as a Global Moderator.
             <br />
             But straight to the point; this website is being designed to cater to the competitive side of the community, but none of this would have been possible without the help of a lot of individuals.
             <br />
@@ -13,9 +13,9 @@
         <br />
         <h2>Special Thanks:</h2>
         <p>
-            BJN39 and AnEventHorizon for assisting me with character pages.
+            <b>BJN39</b> and <b>AnEventHorizon</b> for assisting me with character pages.
             <br />
-            Shitashi for hosting KuroganeHammer.com on his webservers
+            <b>Shitashi</b> for hosting KuroganeHammer.com on his webservers
             <br />
             Everyone else who've helped me in some way. There's many of you!
         </p>
