--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/glossary.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/glossary.html
@@ -1,7 +1,7 @@
 ﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2">
     <div style="text-align:center">
-        <h2>Glossary</h2>
-        <table class="table table-bordered">
+        <h2>GLOSSARY</h2>
+        <table class="table table-hover table-striped">
             <thead>
                 <tr>
                     <th>TERM</th>
