- Hyperlinking to existing KH site for games outside of Sm4sh

--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/home.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/home.html
@@ -28,15 +28,15 @@
                     <a href="#smash4"><img alt="Smash Bros Wii U Frame Data" height="214" src="http://kuroganehammer.com/logo/wiiu.png"></a>
                 </td>
                 <td>
-                    <a href="/Melee"><img alt="Smash Bros Melee Frame Data"  height="214" src="http://kuroganehammer.com/logo/melee.png" ></a>
+                    <a href="http://kuroganehammer.com/Melee"><img alt="Smash Bros Melee Frame Data"  height="214" src="http://kuroganehammer.com/logo/melee.png" ></a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="/Pokken"><img alt="Pokken Frame Data"  height="281" src="http://kuroganehammer.com/logo/pokken.png" ></a>
+                    <a href="http://kuroganehammer.com/Pokken"><img alt="Pokken Frame Data"  height="281" src="http://kuroganehammer.com/logo/pokken.png" ></a>
                 </td>
                 <td>
-                    <a href="/RivalsofAether"><img alt="Rivals of Aether Frame Data"  height="281" src="http://kuroganehammer.com/logo/rivals.png"></a>
+                    <a href="http://kuroganehammer.com/RivalsofAether"><img alt="Rivals of Aether Frame Data"  height="281" src="http://kuroganehammer.com/logo/rivals.png"></a>
                 </td>
             </tr>
         </tbody>
